syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1007
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarSkillUpgradeRsp {
	int32 retcode = 3;
	uint64 avatar_guid = 10;
	uint32 avatar_skill_id = 2;
	uint32 old_level = 5;
	uint32 cur_level = 7;
}
